syntax = "proto3";


enum UpdateType {
  UpdateType_NotSet = 0;
  UpdateType_None = 1;
  UpdateType_Interval = 2;
}

message UpdateConfiguration {
  UpdateType updateType = 1;
  uint32 updateIntervalInMs = 2;
}

message SetUpdateConfiguration {
  UpdateConfiguration updateConfiguration = 1;
  bool saveConfiguration = 2;
}

message HatConfiguration {
  string imagePath = 1;
  bool rotateImage = 2;
}

message SetHatRotateImageCommand {
  bool rotateImage = 1;
}

message SetHatImageCommand {
  string imagePath = 1;
}

message GetDgsrImageValidationResultCommand {
  string imagePath = 1;
}

enum NoArgCommands {
  Nac_NotSet             = 0;
  Nac_ClearScreenToWhite = 1;
  Nac_ClearScreenToBlack = 2;
  Nac_GetConfiguration   = 3;
  Nac_GetFirmwareDetails = 4;
  Nac_RestartDevice      = 5;
}

message MyProjectCommand {
  oneof command {
    NoArgCommands noArgCommand = 1;
    SetHatImageCommand setHatImage = 2;
    SetHatRotateImageCommand setHatRotateImage = 3;
    GetDgsrImageValidationResultCommand getDgsrImageValidationResult = 4;
  }
}


message InvalidCommandResponse {
  string message = 1;
}

message ConfigurationResponse {
  UpdateConfiguration updateConfiguration = 1;
  HatConfiguration hatConfiguration = 2;
}

message FirmwareDetailsResponse {
  string version = 1;
  string buildTime = 2;
}

message UpdateResponse {
  uint32 boardUptimeInMs = 1;
}

message SetHatImageResponse {
  string imagePath = 1;
  bool success = 2;
  string message = 3;
}

message GetDgsrImageValidationResultResponse {
  string imagePath = 1;
  bool isValid = 2;
  string message = 3;
}

message MyProjectResponse {
  oneof response {
    InvalidCommandResponse invalidCommandResponse = 1;
    FirmwareDetailsResponse firmwareDetailsResponse = 2;
    UpdateResponse updateResponse = 3;
    ConfigurationResponse configurationResponse = 4;
    SetHatImageResponse setHatImageResponse = 5;
    GetDgsrImageValidationResultResponse getDgsrImageValidationResultResponse = 6;
  }
}
